Fixed text overflowing over the background.

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,8 +1,10 @@
 .container {
     margin: auto;
-    max-width: 800px; /* 500px */
-    font-family: source-serif-pro, Georgia, Cambria, "Times New Roman", Times, serif; /* sans-serif */
-    /* position: relative; */
+    max-width: 800px;
+    font-family: source-serif-pro, Georgia, Cambria, "Times New Roman", Times, serif; /* used by Medium */
+    position: relative;
+    padding: 0 0.5rem; /* Leaves some inner space */
+    overflow-x: hidden; /* Hides horizontal overflow */
 }
 
 .heading {
@@ -13,10 +15,7 @@
     display: flex;
     list-style: none;
     padding-left: 0;
-}
-
-.nav-link-item {
-    padding-right: 2rem;
+    gap: 20px;
 }
 
 .nav-link-text {
@@ -66,7 +65,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100vh; /* Prevent cutting off content */
+    min-height: 100vh; /* Prevents cutting off content */
     z-index: -1; /* Moves background behind content */
 }
 
@@ -78,6 +77,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.3); /* Adjust opacity */
+    background-color: rgba(255, 255, 255, 0.3); /* Adjusts opacity */
     z-index: -1;
   }
